--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,15 @@
+html,
+body {
+	padding: 0;
+	margin: 0;
+	background-color: #000;
+   color: #fff
+}
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
 .attribution {
 	font-size: 11px;
 	text-align: center;
