--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,6 +10,16 @@ body {
 	padding: 0;
 	margin: 0;
 }
+
+#body_container {
+	border: 1px solid red;
+	width: 100%;
+	max-width: 91.4rem;
+	margin: auto;
+   padding: 0 1rem;
+	text-align: center;
+}
+
 .attribution {
 	font-size: 11px;
 	text-align: center;
