--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,7 +19,14 @@ body {
    padding: 0 1rem;
 	text-align: center;
 }
-
+#header {
+border: 1px solid yellow;
+   display: flex;
+   justify-content: space-between;
+   font-size: 12px;
+   font-weight: 400;
+   /* column-gap: 1rem; */
+}
 .attribution {
 	font-size: 11px;
 	text-align: center;
