--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,8 +2,10 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	background-color: #000;
-   color: #fff
+	background-color: hsl(218, 28%, 13%);
+	color: hsl(0, 0%, 100%);
+	font-size: 14px;
+	font-family: 'Commissioner', sans-serif;
 }
 * {
 	box-sizing: border-box;
