--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,6 +29,10 @@ border: 1px solid yellow;
    font-weight: 400;
    /* column-gap: 1rem; */
 }
+.Logo {
+   width: 100%;
+   max-width: 160px;
+}
 .attribution {
 	font-size: 11px;
 	text-align: center;
