--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,6 +33,11 @@ border: 1px solid yellow;
    width: 100%;
    max-width: 160px;
 }
+#nav {
+   display: flex;
+   align-items: center;
+   column-gap: 1rem;
+}
 .attribution {
 	font-size: 11px;
 	text-align: center;
