--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -38,6 +38,12 @@ border: 1px solid yellow;
    align-items: center;
    column-gap: 1rem;
 }
+
+.Bg-Img {
+   border: 1px solid blue;
+   padding: 5rem 2rem;
+}
+
 .attribution {
 	font-size: 11px;
 	text-align: center;
