--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -43,7 +43,10 @@ border: 1px solid yellow;
    border: 1px solid blue;
    padding: 5rem 2rem;
 }
-
+.ContentMain {
+   border: 1px solid green;
+   background-color: hsl(218, 28%, 13%);
+}
 .attribution {
 	font-size: 11px;
 	text-align: center;
