--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -236,7 +236,7 @@ body {
 	margin: auto;
 	column-gap: 1rem;
 }
-.NavBox:hover, .ActionBtn:hover {
+.NavBox:hover, .ActionBtn:hover, .FooterAbout p:hover {
 	cursor: pointer;
 }
 .attribution {
