style: update style

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -253,6 +253,9 @@ body {
 	cursor: pointer;
 	border-bottom: 1px solid #fff;
 }
+.ActionBtn:hover {
+   background-color: #8bd9e3;
+}
 .attribution {
 	font-size: 11px;
 	text-align: center;
