--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -266,6 +266,16 @@ body {
 .attribution a {
    color: hsl(228, 45%, 44%);
 }
+#gratitude {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	padding-bottom: 2rem;
+}
+#gratitude div {
+	padding: 1rem;
+}
 .svg:hover {
 	background-color: rgb(51, 158, 204);
 }
