style: add scroll stye topage

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,6 +11,10 @@ body {
 	padding: 0;
 	margin: 0;
 }
+.StopScroll {
+	height: 100%;
+	overflow: hidden;
+}
 .ImageSize {
 	width: 100%;
 	height: 100%;
