--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -287,6 +287,21 @@ body {
 .svg:hover {
 	background-color: rgb(51, 158, 204);
 }
+
+/* modal style */
+
+#backdrop {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.6);
+	z-index: 10;
+	pointer-events: none;
+	display: none;
+}
+
 @media screen and (min-width: 425px) {
 	.BgMain {
 		padding-top: 11.1rem;
