--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -321,7 +321,10 @@ body {
 	overflow-y: initial;
 	padding: 2rem 2rem 1rem;
 }
-
+.Modal.visible {
+	display: block;
+	animation: fade-slide-in 0.3s ease-out forwards;
+}
 @media screen and (min-width: 425px) {
 	.BgMain {
 		padding-top: 11.1rem;
