--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -83,6 +83,7 @@ body {
 	border: none;
 	border-radius: 40px;
 	background-color: hsl(198, 60%, 50%);
+   font-weight: 700;
    color: #fff;
 	padding: 1.5rem;
 	width: 100%;
