refactor: update code

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -84,6 +84,7 @@ body {
 	border-radius: 40px;
 	background-color: hsl(198, 60%, 50%);
    font-weight: 700;
+   font-size: 1rem;
    color: #fff;
 	padding: 1.5rem;
 	width: 100%;
